[package]
name = "axum-example"
version = "0.3.0"
authors = ["Andrew Webber <andrewvwebber@googlemail.com>"]
edition = "2021"

[dependencies]
cloudevents-sdk = { path = "../..", features = ["axum"] }
axum = "^0.7"
http = "1"
tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
tower = { version = "^0.4", features = ["util"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
